(DEPLOY) Fix Scroll Overflow Issue, Change Fly Workflow

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -10,6 +10,9 @@ html, body {
     padding: 0 !important;
     width: 100%;
     height: 100%;
+
+    background-color: black;
+    overflow: hidden;
 }
 
 a.button {
