--- a/app/assets/stylesheets/home.css
+++ b/app/assets/stylesheets/home.css
@@ -6,6 +6,7 @@
     display: flex;
 
     position: relative;
+    overflow-y: auto;
 }
 
 .split .left, .split .right {
